[gd_scene load_steps=5 format=3 uid="uid://cykaoex5fovsr"]

[ext_resource type="Theme" uid="uid://bog58tlxodgt8" path="res://root/scenes/game_scene/lucy_adventure/clear_screen/resorce/clear_screen.tres" id="1_x5821"]
[ext_resource type="Script" uid="uid://vltrrica8766" path="res://root/scenes/game_scene/lucy_adventure/clear_screen/clear_screen.gd" id="2_6ofj7"]
[ext_resource type="Shader" uid="uid://d3ddyijy2vb4t" path="res://root/scenes/game_scene/lucy_adventure/clear_screen/resorce/blur.gdshader" id="3_1lfel"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8c4bg"]
shader = ExtResource("3_1lfel")
shader_parameter/blur_amount = 1.5
shader_parameter/tint = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.2
shader_parameter/saturation = 0.30000000000000004

[node name="ClearScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x5821")
script = ExtResource("2_6ofj7")
menu_opened_amount = 1.0

[node name="BlurColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_8c4bg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UIPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -228.0
offset_right = 250.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "STAGE CLEAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="UIPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MainMenu"
